2001-10-01  Alex Larsson  <alexl@redhat.com>

	* data/Makefile.am (install-data-local):
	Move sysconfig and serverconfig out of starthere.
	That was a merge error.

2001-10-01  Darin Adler  <darin@bentspoon.com>

	* README: Updated tags and build order in the README to match
	what Nautilus hackers really use.

2001-09-28  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump gnome-vfs requirement to 1.0.2, since we
	use new APIs that aren't in 1.0.1.

2001-09-27  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* components/hardware/nautilus-hardware-view.c:
	(get_CPU_description):
	i18n fixes for cpu speed and cache size (fixes #45298)
	* icons/gnome/gnome.xml:
	Fix #48322, Theme description for new Gnome theme lacks a dot

2001-09-27  Darin Adler  <darin@bentspoon.com>

	* components/news/nautilus-news.c: (draw_rss_logo_image):
	Format time using eel_strdup_strftime so we don't have
	a fixed maximum buffer size and marked the time format
	for localization.

2001-09-26  Alex Larsson  <alexl@redhat.com>

	* components/mozilla/nautilus-mozilla-content-view.c:
	Allow the mozilla component to open Chrome windows.
	This is needed for simple dialogs when e.g. submitting
	forms.

2001-09-26  Alex Larsson  <alexl@redhat.com>

	Merged more patches from the Red Hat branch.

	2001-09-20  Alex Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-desktop-file-loader.c:
	Correct filename in header.
	(nautilus_desktop_file_new): Use g_new0
	(nautilus_desktop_file_load):
	Don't initialize contents. Don't need to check contents
	for NULL.
	(nautilus_desktop_file_foreach_section):
	Coding style fix.

	* libnautilus-private/nautilus-link-desktop-file.c
	(nautilus_link_desktop_file_local_create): Use fputs instead
	of fwrite.
	
	2001-09-19  Alex Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-link-desktop-file.c
	(nautilus_link_desktop_file_get_link_uri_from_desktop):
	Handle broken .desktop file with type "URL".

	* libnautilus-private/nautilus-icon-factory.c: